--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hi</h1>
-
+<script src="./scripts/arr.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 </html>
