--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <h1>HW5</h1>
 
     <script src="./scripts/index.js"></script>
+    <button type="submit" id="task3"  onclick="getTime(new Date());">Task3</button>
+
 </body>
 </html>
