Internet shop MacOutlet

--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/22ec67f815.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
     <title>MacOutlet</title>
 </head>
+
 <body>
     <script src="js/items.js"></script>
+    <!--     <script src="js/main.js"></script> -->
+    <div class="wrapper">
+        <div class="container">
+            <header>
+                <div class="signin">
+                    <div class="logo"><img src="img/icons/logo.png" alt="logo"></div>
+                    <div class="cart">
+                        <img src="./img/icons/cart.svg" alt="">
+                        <span>0</span>
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class='slideshow-container'>
+                        <img class='slide 33' src='img/banners/air_pods_max_banner.jpg' alt="AirPods Max">
+                        <img class='slide 32' src='img/banners/airpods_pro_banner.png' alt="AirPods Pro">
+                        <img class='slide 29' src='img/banners/apple_tv_banner.png' alt="AppleTV">
+                        <img class='slide 34' src='img/banners/ipad_air_banner.jpg' alt="IPad Air">
+                        <img class='slide 16' src='img/banners/iphone_12_banner.jpg' alt="IPhone 12">
+                        <img class='slide 2' src='img/banners/mac_book_banner.jpg' alt="MacBook">
+                        <img class='slide 13' src='img/banners/watch_banner.jpg' alt="AppleWatch">
+                    </div>
+                    <div class='text-container'>
+                        <a href="">
+                            <div class='slideshow-title'>
+                                AirPods Max
+                            </div>
+                        </a>
+                        <button id="adds" class='add-to-cart slideshow 33'>Add to cart</button>
+
+                    </div>
+                </div>
+            </header>
+            <main>
+                <div class="container-filter">
+                    <div class="search">
+                        <img src="./img/icons/search.svg" alt="search">
+                        <input type="search" name="search-product" id="" placeholder="Enter device name...">
+                    </div>
+                    <div class="filter">
+                        <img src="./img/icons/filter.svg" alt="">
+                    </div>
+                    <div class="sort">
+                        <img src="./img/icons/settings.svg" alt="">
+                    </div>
+                </div>
+                <div class="container-cards" id="container-cards">
+
+                </div>
+            </main>
+        </div>
+
+    </div>
 </body>
+<script src="js/main.js"></script>
+
 </html>
-
-
-
