--- a/index.html
+++ b/index.html
@@ -1,13 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">    
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <title>Daily Calendar</title>
 </head>
+
 <body>
-    <script src="./scripts/index.js"></script>
+    <div class="container" id="container">
+        <!--  section.table.>(.row>.time#$$@0{$$@0:00}+.events#$$@0)*24
+    <div class="event" id="00:15">Exercise</div> -->
+        <section class="table">
+            <div class="row">
+                <div class="time" id="00">00:00</div>
+                <div class="events" id="00">
+                </div>
+            </div>
+            <div class="row">
+                <div class="time" id="01">01:00</div>
+                <div class="events" id="01">
+                </div>
+            </div>
+            <div class="row">
+                <div class="time" id="02">02:00</div>
+                <div class="events" id="02"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="03">03:00</div>
+                <div class="events" id="03"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="04">04:00</div>
+                <div class="events" id="04">
+                </div>
+            </div>
+            <div class="row">
+                <div class="time" id="05">05:00</div>
+                <div class="events" id="05"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="06">06:00</div>
+                <div class="events" id="06"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="07">07:00</div>
+                <div class="events" id="07"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="08">08:00</div>
+                <div class="events" id="08"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="09">09:00</div>
+                <div class="events" id="09"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="10">10:00</div>
+                <div class="events" id="10"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="11">11:00</div>
+                <div class="events" id="11"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="12">12:00</div>
+                <div class="events" id="12"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="13">13:00</div>
+                <div class="events" id="13"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="14">14:00</div>
+                <div class="events" id="14"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="15">15:00</div>
+                <div class="events" id="15"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="16">16:00</div>
+                <div class="events" id="16"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="17">17:00</div>
+                <div class="events" id="17"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="18">18:00</div>
+                <div class="events" id="18"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="19">19:00</div>
+                <div class="events" id="19"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="20">20:00</div>
+                <div class="events" id="20"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="21">21:00</div>
+                <div class="events" id="21"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="22">22:00</div>
+                <div class="events" id="22"></div>
+            </div>
+            <div class="row">
+                <div class="time" id="23">23:00</div>
+                <div class="events" id="23"></div>
+            </div>
+        </section>
+        <section class="modal"id="modal">
+            <div class="modal-event">
+            <form id="event-editor">
+                <div class="span">
+                    Назва події
+                <input type="text" name="event-caption" id="event-caption">
+                </div>
+                <div class="span">
+                    Виберіть колір<input type="color" name="event-colour" id="event-colour">
+                </div>
+                <div class="span">
+                    Виберіть час початку події 
+                <input type="time" name="event-start" id="event-start">
+                </div>
+                <div class="span">
+                    Виберіть час кінця події
+                <input type="time"  name="event-end" id="event-end">
+                </div>
+                <div class="span-button">
+                    <button type="submit">Save</button>
+                <button type="reset">Cancel</button>
+                </div>
+                
+            </form>
+        </div>
+        </section>
+        
+        <script src="./scripts/index.js"></script>
 </body>
+
 </html>
