--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <input type="text" name="event-caption" id="event-caption">
                 </div>
                 <div class="span">
-                    Виберіть колір<input type="color" name="event-colour" id="event-colour">
+                    Виберіть колір<input type="color" name="event-colour" id="event-colour" value="#006edc">
                 </div>
                 <div class="span">
                     Виберіть час початку події 
