--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
     <title>MacOutlet</title>
-</head>
 
 <body>
-    <script src="js/items.js"></script>
+    <!--  <script src="js/items.js"></script> -->
+    <!--     <script src="./js/backend.js"></script> -->
     <div class="wrapper">
         <div class="container">
             <header>
                 <div class="signin">
-                    <div class="logo"><img src="img/icons/logo.png" alt="logo"></div>
+                    <div class="logo"><img src="./img/icons/logo.png" alt="logo"></div>
                     <div class="">
                         <div class="cart" id="cart" title="closed">
                             <img src="./img/icons/cart.svg" alt="">
@@ -189,6 +189,6 @@
 
     </div>
 </body>
-<script src="js/main.js"></script>
+<script type="module" src="./js/main.js"></script>
 
 </html>
