add heroku and backend

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -70,7 +70,7 @@
                 <div class="container-filter">
                     <div class="search">
                         <img src="./img/icons/search.svg" alt="search">
-                        <input type="search" name="search-product" id="" placeholder="Enter device name...">
+                        <input type="search" name="search-product" id="search" placeholder="Enter device name...">
                     </div>
                     <div class="filter inactive" id="filter">
                         <img src="./img/icons/filter.svg" alt="">
